# pyglass

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: MACOS_TODO.md
examples/: desktop_window.py  in_app_modal.py  recipes.py
pyglass/: __init__.py  _magnifier.py  _screencapturekit.py  backdrop.py  blur.py  demo.py  desktop.py  effect.py  glass.py  pane.py  refract.py
scripts/: render_preview.py
