[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglass-qt"
version = "0.2.1"
description = "Physically-grounded refractive glass widgets for PyQt6 — real refraction, chromatic dispersion, Fresnel reflection and frost."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "neomosh8", email = "mosh@neocore.tech" }]
keywords = ["pyqt6", "qt", "glass", "glassmorphism", "refraction", "dispersion", "ui", "widgets"]
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/neomosh8/pyglass"
Repository = "https://github.com/neomosh8/pyglass"
Issues = "https://github.com/neomosh8/pyglass/issues"

# Ship only the importable package (not the root demo/examples/scripts).
[tool.setuptools]
packages = ["pyglass"]
